--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,31 +1,47 @@
-.cards > ul {
-  list-style: none;
+.cards-container .button-container {
+  display: flex;
+  justify-content: flex-end;
   margin: 0;
-  padding: 0;
+}
+
+.cards {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(278px, 1fr));
-  grid-gap: 16px;
+  grid-template-columns: repeat(auto-fit, minmax(181px, 1fr));
+  gap: 20px;
+  margin: 2rem auto 0;
 }
 
-.cards > ul > li {
-  border: 1px solid var(--color-neutral-500);
-  background-color: var(--background-color)
+.cards .article-card {
+  text-decoration: none;
+  color: inherit;
+  margin: 0 auto;
 }
 
-.cards .cards-card-body {
-  margin: 16px;
+.cards .card-image {
+  overflow: hidden;
 }
 
-.cards .cards-card-image {
-  line-height: 0;
-}
-
-.cards .cards-card-body > *:first-child {
-  margin-top: 0;
-}
-
-.cards > ul > li img {
+.cards .card-image img {
   width: 100%;
-  aspect-ratio: 4 / 3;
+  height: 100%;
+  display: block;
+  min-height: 124px;
   object-fit: cover;
+}
+
+.cards .card-info {
+  padding: 10px;
+  text-align: left;
+}
+
+.cards .card-info p {
+  font-size: var(--body-font-size-s);
+  line-height: normal;
+  margin: 0;
+  padding-bottom: 5px;
+  font-weight: 900;
+}
+
+.cards .card-info span {
+  font-size: var(--body-font-size-xs);
 }
