Set nav tab to be active based off url path

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -223,6 +223,7 @@ header nav .nav-sections ul > li > a {
   padding: 1em 1.2em;
 }
 
+header nav .nav-sections ul > li > a.active,
 header nav .nav-sections ul > li > a:hover {
   text-decoration: none;
   background-color: var( --color-brand-theme-2);
