Save work for breadcrumbs

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -7,6 +7,7 @@ header .header-nav-wrapper {
   top: 40px;
   padding: 2em 0;
   transition: padding-bottom .30s ease,padding-top .30s; 
+  border-bottom: 1px solid var(--color-neutral-400);
 }
 
 @media (width < 768px) {
@@ -386,4 +387,32 @@ header .nav-search-input input {
   header .nav-search-input input {
     min-width: 400px;
   }
+}
+
+/* Breadcrumb */
+.breadcrumb-container {
+  max-width: var(--large-grid-layout);
+  margin: 0 auto;
+  padding: 4rem 15px 1rem;
+}
+
+.breadcrumb-container,
+.breadcrumb-container a,
+.breadcrumb-container span {
+  font-size: var( --body-font-size-xs);
+  text-transform: uppercase;
+}
+
+.breadcrumb-container a:hover {
+  border-bottom: 2px solid var(--color-brand-theme-1);
+  content: "";
+  padding: 0.5rem;
+  text-decoration: none;
+}
+
+.breadcrumb-container a,
+.breadcrumb-container span {
+  padding: 0.5rem;
+  line-height: 21px;
+  letter-spacing: 0.16em;
 }
