--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -78,3 +78,25 @@ main .hero-container {
 .hero .hero-desc-wrapper .button-container {
   display: inline-block;
 }
+
+.hero-container .default-content-wrapper h1,
+.hero-container .default-content-wrapper h2,
+.hero-container .default-content-wrapper h3,
+.hero-container .default-content-wrapper h4,
+.hero-container .default-content-wrapper h5,
+.hero-container .default-content-wrapper h6 {
+  margin: 1rem 0 3rem;
+}
+
+
+@media (width <= 768px) {
+  .hero-container .default-content-wrapper h1,
+  .hero-container .default-content-wrapper h2,
+  .hero-container .default-content-wrapper h3,
+  .hero-container .default-content-wrapper h4,
+  .hero-container .default-content-wrapper h5,
+  .hero-container .default-content-wrapper h6 {
+    padding: 0 1rem;
+    margin: 1rem 0 2rem;
+  }
+}
