--- a/blocks/tabs/tabs.css
+++ b/blocks/tabs/tabs.css
@@ -20,13 +20,6 @@
   margin: 0 0 24px;
 }
 
-@media (min-width: 1024px) {
-  .tabs-control {
-    /* border-bottom: 1px solid #000; */
-  }
-}
-
-
 .tab {
   margin: 0;
   position: relative;
@@ -36,7 +29,6 @@
   top: 0;
   float: none;
 }
-
 
 .tab>label,
 .tab>label>h2,
@@ -65,7 +57,7 @@
   text-decoration: none;
 }
 
-@media (min-width: 1024px) {
+@media (width <= 1024px) {
   .tab>label>h2>a {
     padding: 24px;
     border-bottom: 3px solid transparent;
