--- a/blocks/tabs/tabs.css
+++ b/blocks/tabs/tabs.css
@@ -32,7 +32,7 @@
 
 .tab>label,
 .tab>label>h2,
-.tab>label>h2>a {
+.tab>label>h2>div {
   font-size: 24px;
   cursor: pointer;
 }
@@ -41,7 +41,7 @@
   margin-bottom: 0;
 }
 
-.tab>label>h2>a {
+.tab>label>h2>div {
   display: block;
   width: 100%;
   font-weight: 300;
@@ -53,12 +53,12 @@
   font-size: 24px;
 }
 
-.tab>label>h2>a:hover {
+.tab>label>h2>div:hover {
   text-decoration: none;
 }
 
 @media (width <= 1024px) {
-  .tab>label>h2>a {
+  .tab>label>h2>div {
     padding: 24px;
     border-bottom: 3px solid transparent;
   }
@@ -73,52 +73,52 @@
   color: #777;
 }
 
-.tabs-control .tab:hover>label>h2>a {
+.tabs-control .tab:hover>label>h2>div {
   color: var(--link-hover-color);
 }
 
 /* As we cannot replace the numbers with variables or calls to element properties, the number of this selector parts is our tab count limit */
-.tabs-control .tab:hover>label>h2>a,
-.tabs [type="radio"]:nth-of-type(1):checked~.tabs-control .tab:nth-of-type(1)>label>h2>a,
-.tabs [type="radio"]:nth-of-type(2):checked~.tabs-control .tab:nth-of-type(2)>label>h2>a,
-.tabs [type="radio"]:nth-of-type(3):checked~.tabs-control .tab:nth-of-type(3)>label>h2>a,
-.tabs [type="radio"]:nth-of-type(4):checked~.tabs-control .tab:nth-of-type(4)>label>h2>a,
-.tabs [type="radio"]:nth-of-type(5):checked~.tabs-control .tab:nth-of-type(5)>label>h2>a,
-.tabs [type="radio"]:nth-of-type(1):checked~.tabs-control .tab:nth-of-type(6)>label>h2>a,
-.tabs [type="radio"]:nth-of-type(2):checked~.tabs-control .tab:nth-of-type(7)>label>h2>a,
-.tabs [type="radio"]:nth-of-type(3):checked~.tabs-control .tab:nth-of-type(8)>label>h2>a,
-.tabs [type="radio"]:nth-of-type(4):checked~.tabs-control .tab:nth-of-type(9)>label>h2>a,
-.tabs [type="radio"]:nth-of-type(5):checked~.tabs-control .tab:nth-of-type(10)>label>h2>a,
-.tabs [type="radio"]:nth-of-type(5):checked~.tabs-control .tab:nth-of-type(11)>label>h2>a,
-.tabs [type="radio"]:nth-of-type(1):checked~.tabs-control .tab:nth-of-type(12)>label>h2>a,
-.tabs [type="radio"]:nth-of-type(2):checked~.tabs-control .tab:nth-of-type(13)>label>h2>a,
-.tabs [type="radio"]:nth-of-type(3):checked~.tabs-control .tab:nth-of-type(14)>label>h2>a,
-.tabs [type="radio"]:nth-of-type(4):checked~.tabs-control .tab:nth-of-type(15)>label>h2>a,
-.tabs [type="radio"]:nth-of-type(2):checked~.tabs-control .tab:nth-of-type(16)>label>h2>a,
-.tabs [type="radio"]:nth-of-type(3):checked~.tabs-control .tab:nth-of-type(17)>label>h2>a,
-.tabs [type="radio"]:nth-of-type(4):checked~.tabs-control .tab:nth-of-type(18)>label>h2>a {
+.tabs-control .tab:hover>label>h2>div,
+.tabs [type="radio"]:nth-of-type(1):checked~.tabs-control .tab:nth-of-type(1)>label>h2>div,
+.tabs [type="radio"]:nth-of-type(2):checked~.tabs-control .tab:nth-of-type(2)>label>h2>div,
+.tabs [type="radio"]:nth-of-type(3):checked~.tabs-control .tab:nth-of-type(3)>label>h2>div,
+.tabs [type="radio"]:nth-of-type(4):checked~.tabs-control .tab:nth-of-type(4)>label>h2>div,
+.tabs [type="radio"]:nth-of-type(5):checked~.tabs-control .tab:nth-of-type(5)>label>h2>div,
+.tabs [type="radio"]:nth-of-type(1):checked~.tabs-control .tab:nth-of-type(6)>label>h2>div,
+.tabs [type="radio"]:nth-of-type(2):checked~.tabs-control .tab:nth-of-type(7)>label>h2>div,
+.tabs [type="radio"]:nth-of-type(3):checked~.tabs-control .tab:nth-of-type(8)>label>h2>div,
+.tabs [type="radio"]:nth-of-type(4):checked~.tabs-control .tab:nth-of-type(9)>label>h2>div,
+.tabs [type="radio"]:nth-of-type(5):checked~.tabs-control .tab:nth-of-type(10)>label>h2>div,
+.tabs [type="radio"]:nth-of-type(5):checked~.tabs-control .tab:nth-of-type(11)>label>h2>div,
+.tabs [type="radio"]:nth-of-type(1):checked~.tabs-control .tab:nth-of-type(12)>label>h2>div,
+.tabs [type="radio"]:nth-of-type(2):checked~.tabs-control .tab:nth-of-type(13)>label>h2>div,
+.tabs [type="radio"]:nth-of-type(3):checked~.tabs-control .tab:nth-of-type(14)>label>h2>div,
+.tabs [type="radio"]:nth-of-type(4):checked~.tabs-control .tab:nth-of-type(15)>label>h2>div,
+.tabs [type="radio"]:nth-of-type(2):checked~.tabs-control .tab:nth-of-type(16)>label>h2>div,
+.tabs [type="radio"]:nth-of-type(3):checked~.tabs-control .tab:nth-of-type(17)>label>h2>div,
+.tabs [type="radio"]:nth-of-type(4):checked~.tabs-control .tab:nth-of-type(18)>label>h2>div {
   color: var(--link-hover-color);
   border-color: var(--link-color);
 }
 
-.tabs [type="radio"]:nth-of-type(1):checked~.tabs-control .tab:nth-of-type(1)>label>h2>a:hover,
-.tabs [type="radio"]:nth-of-type(2):checked~.tabs-control .tab:nth-of-type(2)>label>h2>a:hover,
-.tabs [type="radio"]:nth-of-type(3):checked~.tabs-control .tab:nth-of-type(3)>label>h2>a:hover,
-.tabs [type="radio"]:nth-of-type(4):checked~.tabs-control .tab:nth-of-type(4)>label>h2>a:hover,
-.tabs [type="radio"]:nth-of-type(5):checked~.tabs-control .tab:nth-of-type(5)>label>h2>a:hover,
-.tabs [type="radio"]:nth-of-type(1):checked~.tabs-control .tab:nth-of-type(6)>label>h2>a:hover,
-.tabs [type="radio"]:nth-of-type(2):checked~.tabs-control .tab:nth-of-type(7)>label>h2>a:hover,
-.tabs [type="radio"]:nth-of-type(3):checked~.tabs-control .tab:nth-of-type(8)>label>h2>a:hover,
-.tabs [type="radio"]:nth-of-type(4):checked~.tabs-control .tab:nth-of-type(9)>label>h2>a:hover,
-.tabs [type="radio"]:nth-of-type(5):checked~.tabs-control .tab:nth-of-type(10)>label>h2>a:hover,
-.tabs [type="radio"]:nth-of-type(5):checked~.tabs-control .tab:nth-of-type(11)>label>h2>a:hover,
-.tabs [type="radio"]:nth-of-type(1):checked~.tabs-control .tab:nth-of-type(12)>label>h2>a:hover,
-.tabs [type="radio"]:nth-of-type(2):checked~.tabs-control .tab:nth-of-type(13)>label>h2>a:hover,
-.tabs [type="radio"]:nth-of-type(3):checked~.tabs-control .tab:nth-of-type(14)>label>h2>a:hover,
-.tabs [type="radio"]:nth-of-type(4):checked~.tabs-control .tab:nth-of-type(15)>label>h2>a:hover,
-.tabs [type="radio"]:nth-of-type(2):checked~.tabs-control .tab:nth-of-type(16)>label>h2>a:hover,
-.tabs [type="radio"]:nth-of-type(3):checked~.tabs-control .tab:nth-of-type(17)>label>h2>a:hover,
-.tabs [type="radio"]:nth-of-type(4):checked~.tabs-control .tab:nth-of-type(18)>label>h2>a:hover {
+.tabs [type="radio"]:nth-of-type(1):checked~.tabs-control .tab:nth-of-type(1)>label>h2>div:hover,
+.tabs [type="radio"]:nth-of-type(2):checked~.tabs-control .tab:nth-of-type(2)>label>h2>div:hover,
+.tabs [type="radio"]:nth-of-type(3):checked~.tabs-control .tab:nth-of-type(3)>label>h2>div:hover,
+.tabs [type="radio"]:nth-of-type(4):checked~.tabs-control .tab:nth-of-type(4)>label>h2>div:hover,
+.tabs [type="radio"]:nth-of-type(5):checked~.tabs-control .tab:nth-of-type(5)>label>h2>div:hover,
+.tabs [type="radio"]:nth-of-type(1):checked~.tabs-control .tab:nth-of-type(6)>label>h2>div:hover,
+.tabs [type="radio"]:nth-of-type(2):checked~.tabs-control .tab:nth-of-type(7)>label>h2>div:hover,
+.tabs [type="radio"]:nth-of-type(3):checked~.tabs-control .tab:nth-of-type(8)>label>h2>div:hover,
+.tabs [type="radio"]:nth-of-type(4):checked~.tabs-control .tab:nth-of-type(9)>label>h2>div:hover,
+.tabs [type="radio"]:nth-of-type(5):checked~.tabs-control .tab:nth-of-type(10)>label>h2>div:hover,
+.tabs [type="radio"]:nth-of-type(5):checked~.tabs-control .tab:nth-of-type(11)>label>h2>div:hover,
+.tabs [type="radio"]:nth-of-type(1):checked~.tabs-control .tab:nth-of-type(12)>label>h2>div:hover,
+.tabs [type="radio"]:nth-of-type(2):checked~.tabs-control .tab:nth-of-type(13)>label>h2>div:hover,
+.tabs [type="radio"]:nth-of-type(3):checked~.tabs-control .tab:nth-of-type(14)>label>h2>div:hover,
+.tabs [type="radio"]:nth-of-type(4):checked~.tabs-control .tab:nth-of-type(15)>label>h2>div:hover,
+.tabs [type="radio"]:nth-of-type(2):checked~.tabs-control .tab:nth-of-type(16)>label>h2>div:hover,
+.tabs [type="radio"]:nth-of-type(3):checked~.tabs-control .tab:nth-of-type(17)>label>h2>div:hover,
+.tabs [type="radio"]:nth-of-type(4):checked~.tabs-control .tab:nth-of-type(18)>label>h2>div:hover {
   color: var(--link-hover-color);
 }
 
