--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,10 +12,36 @@
  * governing permissions and limitations under the License.
  */
 
- :root {
+ :root,
+ .elsie-base-design.elsie-base-design {
+  /* WKND Adventure Theme */
+  --color-brand-black-1: #000; /* Type 1: Black */
+  --color-brand-black-2: #202020; /* Type 2: Black */
+  --color-brand-theme-1: #FFEA00; /* Yellow */
+  --color-brand-theme-2: #F5F5F5; /* Background grey */
+
+  /* Font Family  */ 
+  --heading-font-family: 'Source Serif Pro', sans-serif;
+  --type-base-font-family: 'Source Sans Pro', roboto, roboto-fallback, sans-serif;
+
+  /* body sizes */
+  --body-font-size-xs: 10px;
+  --body-font-size-s: 12px;
+  --body-font-size-m: 16px;
+  --body-font-size-lg: 20px;
+  --body-font-size-xl: 24px;
+
+  /* heading sizes */
+  --heading-font-size-xs: 18px;
+  --heading-font-size-s: 20px;
+  --heading-font-size-m: 24px;
+  --heading-font-size-l: 32px;
+  --heading-font-size-xl: 36px;
+  --heading-font-size-xxl: 40px;
+
   /* Elsie base design */
   --color-brand-300: #6d6d6d;
-  --color-brand-500: #454545;
+  --color-brand-500: #454545; /* <-- used by the core Button component for background */
   --color-brand-600: #383838;
   --color-brand-700: #2b2b2b;
   --color-neutral-50: #fff;
@@ -89,7 +115,6 @@
   --spacing-huge: 120px;
   --spacing-xhuge: 144px;
   --spacing-xxhuge: 192px;
-  --type-base-font-family: 'Source Sans Pro', roboto, roboto-fallback, sans-serif;
   --type-display-1-font: normal normal 300 6rem/7.2rem
     var(--type-base-font-family);
   --type-display-1-letter-spacing: 0.04em;
@@ -148,28 +173,6 @@
   --nav-height: 6.4rem;
   --med-grid-layout: 792px;
   --large-grid-layout: 1200px;
-
-  /* Additional brand tokens - WKND Adventure Theme */
-  --color-brand-black-1: #000; /* Type 1: Black */
-  --color-brand-black-2: #202020; /* Type 2: Black */
-  --color-brand-theme-1: #FFEA00; /* Yellow */
-  --color-brand-theme-2: #F5F5F5; /* Background grey */
-  --heading-font-family: 'Source Serif Pro', sans-serif;
-
-  /* body sizes */
-  --body-font-size-xs: 10px;
-  --body-font-size-s: 12px;
-  --body-font-size-m: 16px;
-  --body-font-size-lg: 20px;
-  --body-font-size-xl: 24px;
-
-  /* heading sizes */
-  --heading-font-size-xs: 18px;
-  --heading-font-size-s: 20px;
-  --heading-font-size-m: 24px;
-  --heading-font-size-l: 32px;
-  --heading-font-size-xl: 36px;
-  --heading-font-size-xxl: 40px;
 }
 
 html {
@@ -239,7 +242,13 @@ h6 {
 .section .default-content-wrapper > h3,
 .section .default-content-wrapper > h4,
 .section .default-content-wrapper > h5,
-.section .default-content-wrapper > h6 {
+.section .default-content-wrapper > h6,
+.section .elsie-base-design h1,
+.section .elsie-base-design h2,
+.section .elsie-base-design h3,
+.section .elsie-base-design h4,
+.section .elsie-base-design h5,
+.section .elsie-base-design h6 {
   width: fit-content;
   margin: 0;
 }
@@ -249,14 +258,19 @@ h6 {
 .section .default-content-wrapper h3::after,
 .section .default-content-wrapper h4::after,
 .section .default-content-wrapper h5::after,
-.section .default-content-wrapper h6::after {
+.section .default-content-wrapper h6::after,
+.section .elsie-base-design h1::after,
+.section .elsie-base-design h2::after,
+.section .elsie-base-design h3::after,
+.section .elsie-base-design h4::after,
+.section .elsie-base-design h5::after,
+.section .elsie-base-design h6::after {
   border-bottom: 2px solid var(--color-brand-theme-1);
   content: "";
   display: block;
   padding-top: 8px;
   min-width: 84px;
-  max-width: 30%;
-  width: 100%;
+  width: fit-content;
 }
 
 p,
