--- a/blocks/adventure-details/adventure-details.css
+++ b/blocks/adventure-details/adventure-details.css
@@ -1,6 +1,16 @@
 
 /* stylelint-disable no-empty-source */
 
-/* .elsie-base-design .some-class {
-
-} */
+.elsie-base-design .pdp-product h1::after,
+.elsie-base-design .pdp-product h2::after,
+.elsie-base-design .pdp-product h3::after,
+.elsie-base-design .pdp-product h4::after,
+.elsie-base-design .pdp-product h5::after,
+.elsie-base-design .pdp-product h6::after {
+  border-bottom: 2px solid var(--color-brand-theme-1);
+  content: "";
+  display: block;
+  padding-top: 8px;
+  min-width: 84px;
+  width: fit-content;
+}
