Style cart page

--- a/blocks/adventure-details/adventure-details.css
+++ b/blocks/adventure-details/adventure-details.css
@@ -1,5 +1,5 @@
 
-/* stylelint-disable no-empty-source */
+/* stylelint-disable */
 
 .elsie-base-design .pdp-product h1::after,
 .elsie-base-design .pdp-product h2::after,
