--- a/blocks/commerce-cart/commerce-cart.css
+++ b/blocks/commerce-cart/commerce-cart.css
@@ -1,4 +1,4 @@
-/* stylelint-disable no-empty-source */
+/* stylelint-disable */
 .elsie-base-design .elsie-price-summary {
   background-color: var(--color-neutral-50);
 }
@@ -14,6 +14,13 @@
   padding-top: 8px;
   min-width: 90px;
   width: fit-content;
+}
+
+.elsie-base-design .elsie-button--primary:focus,
+.elsie-base-design .elsie-button--primary:focus:hover,
+.elsie-base-design .elsie-button--secondary:focus,
+.elsie-base-design .elsie-button--secondary:focus:hover {
+  background-color: var(--color-brand-theme-1);
 }
 
 .elsie-base-design .elsie-price-summary hr[role="separator"],
