--- a/blocks/product-details/product-details.css
+++ b/blocks/product-details/product-details.css
@@ -1,4 +1,4 @@
-/* stylelint-disable no-empty-source */
+/* stylelint-disable */
 .elsie-base-design .pdp-product__prices {
   margin-top: 2rem;
 }
@@ -15,6 +15,13 @@
 .elsie-base-design .elsie-button--primary,
 .elsie-base-design .elsie-button--secondary {
   width: 100%;
+}
+
+.elsie-base-design .elsie-button--primary:focus,
+.elsie-base-design .elsie-button--primary:focus:hover,
+.elsie-base-design .elsie-button--secondary:focus,
+.elsie-base-design .elsie-button--secondary:focus:hover {
+  background-color: var(--color-brand-theme-1);
 }
 
 .elsie-base-design .pdp-carousel__button--thumbnailsColumn {
