--- a/blocks/commerce-order-confirmation/commerce-order-confirmation.css
+++ b/blocks/commerce-order-confirmation/commerce-order-confirmation.css
@@ -1,1 +1,32 @@
-/* stylelint-disable no-empty-source */
+/* stylelint-disable */
+
+.elsie-base-design .order-confirmation-header__title {
+  margin: 0 auto;
+}
+
+.elsie-base-design .order-confirmation-order-summary {
+  background: var(--color-brand-theme-2);
+  border: none;
+}
+
+.elsie-base-design .order-confirmation-order-summary__title {
+  margin-bottom: 1rem;
+}
+
+.elsie-base-design .order-confirmation-order-summary__title::after,
+.elsie-base-design .order-confirmation-details__title::after {
+  border-bottom: 2px solid var(--color-brand-theme-1);
+  content: "";
+  display: block;
+  padding-top: 8px;
+  min-width: 90px;
+  width: fit-content;
+}
+
+.elsie-base-design .order-confirmation-order-summary hr {
+  display: none;
+}
+
+.elsie-base-design .order-confirmation-details {
+  border: none;
+}
