--- a/blocks/adventure-details/adventure-details.css
+++ b/blocks/adventure-details/adventure-details.css
@@ -1,18 +1,27 @@
 
 /* stylelint-disable */
 
-.elsie-base-design .pdp-product h1::after,
-.elsie-base-design .pdp-product h2::after,
-.elsie-base-design .pdp-product h3::after,
-.elsie-base-design .pdp-product h4::after,
-.elsie-base-design .pdp-product h5::after,
-.elsie-base-design .pdp-product h6::after {
+.elsie-base-design .pdp-product h1:not(.pdp-product__title)::after,
+.elsie-base-design .pdp-product h2:not(.pdp-product__title)::after,
+.elsie-base-design .pdp-product h3:not(.pdp-product__title)::after,
+.elsie-base-design .pdp-product h4:not(.pdp-product__title)::after,
+.elsie-base-design .pdp-product h5:not(.pdp-product__title)::after,
+.elsie-base-design .pdp-product h6:not(.pdp-product__title)::after,
+.elsie-base-design .custom-title::after {
   border-bottom: 2px solid var(--color-brand-theme-1);
   content: "";
   display: block;
   padding-top: 8px;
   min-width: 84px;
   width: fit-content;
+}
+
+.elsie-base-design .pdp-product__title div:not(.custom-title) {
+  font-size: var(--body-font-size-lg);
+  font-weight: 600;
+  letter-spacing: 0.04em;
+  line-height: normal;
+  margin-top: 2rem;
 }
 
 .elsie-base-design .pdp-product__prices,
@@ -60,4 +69,35 @@
 
 .elsie-base-design .pdp-carousel__button--thumbnailsColumn[aria-label="Next"] {
   bottom: 1.75rem;
+}
+
+.elsie-base-design .pdp-product__sku {
+  display: none;
+}
+
+.elsie-base-design .pdp-product__prices {
+  margin: 0;
+}
+
+.elsie-base-design .pdp-product__prices .elsie-price {
+  font-size: 14px;
+}
+
+.elsie-base-design .pdp-product__actions .pdp-swatches {
+  grid-gap: 5rem;
+}
+
+.elsie-base-design .pdp-product__buttons .elsie-button {
+  text-transform: uppercase;
+}
+
+.elsie-base-design .pdp-product__quantity .quantity-label {
+  font-size: var(--body-font-size-s);
+  font-weight: 600;
+}
+
+.elsie-base-design .pdp-product__options .options-label {
+  font-size: var(--body-font-size-s);
+  font-weight: 400;
+  color: var(--color-neutral-700);
 }
