--- a/blocks/adventure-details/adventure-details.css
+++ b/blocks/adventure-details/adventure-details.css
@@ -39,6 +39,10 @@
   grid-gap: 1.5rem 0;
 }
 
+.elsie-base-design .pdp-product__buttons button:nth-of-type(1) {
+  flex-basis: 100%;
+}
+
 .elsie-base-design .pdp-product__buttons button:nth-of-type(2),
 .elsie-base-design .pdp-product__buttons button:nth-of-type(3) {
   flex-basis: 50%;
@@ -47,7 +51,7 @@
 
 .elsie-base-design .elsie-button--primary,
 .elsie-base-design .elsie-button--secondary {
-  width: 100%;
+  width: auto;
 }
 
 .elsie-base-design .pdp-carousel__button--thumbnailsColumn {
