--- a/blocks/product-details/product-details.css
+++ b/blocks/product-details/product-details.css
@@ -37,3 +37,17 @@
 .elsie-base-design .pdp-carousel__button--thumbnailsColumn[aria-label="Next"] {
   bottom: 1.75rem;
 }
+
+.elsie-base-design .pdp-product__column-body {
+  display: flex;
+  flex-direction: column;
+}
+
+.elsie-base-design .pdp-product__column-body .pdp-product__description {
+  order: 6;
+}
+
+.elsie-base-design .pdp-product__column-body .pdp-product__attributes {
+  order: 5;
+  margin: 0;
+}
